(library
 (name bilk)
 (public_name bilk)
 (libraries unix dynlink yojson zarith)
 (foreign_stubs (language c) (names bilk_stubs ext_stubs inotify_stubs))
 (c_library_flags (-ldl))
 (install_c_headers bilk))

(rule
 (targets bilk_config.ml)
 (deps (env_var PWD))
 (action
  (bash "echo 'let stdlib_source_dir = \"'$(cd %{project_root} && pwd)'/stdlib\"' > %{targets}")))
