(tests
 (names test_char_type test_datum test_readtable test_loc test_syntax test_port test_reader test_symbol test_env test_instance test_opcode test_compiler test_vm test_m6_review test_expander test_library test_fasl test_aot test_terminal test_history test_line_editor test_tokenizer test_highlight test_paredit test_semver test_package test_pkg_manager test_srfi test_venv test_search_path test_regexp_engine test_c_api test_extension test_dap test_debug_server test_lsp test_profiler test_profile_report test_completion test_completion_context test_repl_protocol test_scrollback test_repl_server test_repl_client test_dep_graph test_build test_watch test_repository test_lockfile test_session test_checkpoint test_repl_crypto test_ssh_connect test_repl_command test_repl_e2e test_session_store)
 (libraries bilk alcotest qcheck-core qcheck-alcotest yojson zarith mirage-crypto-rng.unix))

(test
 (name test_test_cmd)
 (libraries bilk alcotest str))

(test
 (name test_language_server)
 (libraries bilk alcotest yojson threads.posix))

(test
 (name test_c_embed)
 (libraries bilk)
 (foreign_stubs (language c) (names test_c_embed_impl test_c_embed_stub))
 (link_flags (-linkall)))
